[package]
name = "spaced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = { version = "0.4.0", features = ["axum"] }
actix-rt = "2.8.0"
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
url = "2.3.1"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
